--- a/IntegratedLibrarySystemV2/IntegratedLibrarySystemV2-ejb/nbproject/private/private.properties
+++ b/IntegratedLibrarySystemV2/IntegratedLibrarySystemV2-ejb/nbproject/private/private.properties
@@ -7,4 +7,4 @@ j2ee.server.middleware=E:/Glass Fish 4.1.1/glassfish-4.1.1/glassfish4
 javac.debug=true
 javadoc.preview=true
 netbeans.user=C:\\Users\\Wu Fei Yu\\AppData\\Roaming\\NetBeans\\8.2
-user.properties.file=C:\\Users\\lester\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Wu Fei Yu\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
