--- a/SelfServiceKioskClient/nbproject/project.properties
+++ b/SelfServiceKioskClient/nbproject/project.properties
@@ -66,7 +66,7 @@ main.class=selfservicekioskclient.Main
 manifest.file=${meta.inf}/MANIFEST.MF
 meta.inf=${source.root}/conf
 platform.active=default_platform
-project.IntegratedLibrarySystemV2Library=../../IS2103_A2-Pending/IntegratedLibrarySystemV2Library
+project.IntegratedLibrarySystemV2Library=../IntegratedLibrarySystemV2Library
 reference.IntegratedLibrarySystemV2Library.jar=${project.IntegratedLibrarySystemV2Library}/dist/IntegratedLibrarySystemV2Library.jar
 resource.dir=setup
 run.classpath=\
