--- a/SelfServiceKioskClient/nbproject/private/private.properties
+++ b/SelfServiceKioskClient/nbproject/private/private.properties
@@ -11,5 +11,5 @@ j2ee.server.middleware=E:/Glass Fish 4.1.1/glassfish-4.1.1/glassfish4
 javac.debug=true
 javadoc.preview=true
 source.encoding=UTF-8
-user.properties.file=/Users/jinwei/Library/Application Support/NetBeans/8.2/build.properties
+user.properties.file=C:\\Users\\Wu Fei Yu\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 wa.copy.client.jar.from=E:\\Glass Fish 4.1.1\\glassfish-4.1.1\\glassfish4\\glassfish\\domains\\domain1\\generated\\xml
