--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 /IntegratedLibrarySystemV2Library/build/
+/IntegratedLibrarySystemV2/build/
+/IntegratedLibrarySystemV2/dist/
+/SelfServiceKioskClient/nbproject/private/
+/LibraryAdminTerminalClient/nbproject/private/
+/IntegratedLibrarySystemV2Library/nbproject/private/
+/IntegratedLibrarySystemV2Library/dist/
+/LibraryAdminTerminalClient/build/
+/LibraryAdminTerminalClient/dist/
+/SelfServiceKioskClient/dist/
+/SelfServiceKioskClient/build/
