--- a/SelfServiceKioskClient/nbproject/private/private.properties
+++ b/SelfServiceKioskClient/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 deploy.ant.properties.file=/Users/jinwei/Library/Application Support/NetBeans/8.2/config/GlassFishEE6/Properties/gfv3-512768886.properties
 j2ee.appclient.tool.jvmoptions=-Djava.endorsed.dirs="/Applications/NetBeans/glassfish-4.1.1/glassfish/lib/endorsed":"/Applications/NetBeans/glassfish-4.1.1/glassfish/modules/endorsed" -javaagent:"/Applications/NetBeans/glassfish-4.1.1/glassfish/lib/gf-client.jar"=mode=acscript,arg=-configxml,arg="/Applications/NetBeans/glassfish-4.1.1/glassfish/domains/domain1/config/glassfish-acc.xml",client=jar=
-j2ee.appclient.tool.jvmoptions.class=-Djava.endorsed.dirs="E:\\Glass Fish 4.1.1\\glassfish-4.1.1\\glassfish4\\glassfish\\lib\\endorsed";"E:\\Glass Fish 4.1.1\\glassfish-4.1.1\\glassfish4\\glassfish\\modules\\endorsed" -javaagent:"E:\\Glass Fish 4.1.1\\glassfish-4.1.1\\glassfish4\\glassfish\\lib\\gf-client.jar"=mode=acscript,arg=-configxml,arg="E:\\Glass Fish 4.1.1\\glassfish-4.1.1\\glassfish4\\glassfish\\domains\\domain1\\config\\glassfish-acc.xml",client=class=
+j2ee.appclient.tool.jvmoptions.class=-Djava.endorsed.dirs="/Applications/NetBeans/glassfish-4.1.1/glassfish/lib/endorsed":"/Applications/NetBeans/glassfish-4.1.1/glassfish/modules/endorsed" -javaagent:"/Applications/NetBeans/glassfish-4.1.1/glassfish/lib/gf-client.jar"=mode=acscript,arg=-configxml,arg="/Applications/NetBeans/glassfish-4.1.1/glassfish/domains/domain1/config/glassfish-acc.xml",client=class=
 j2ee.appclient.tool.mainclass=org.glassfish.appclient.client.AppClientFacade
 j2ee.appclient.tool.runtime=
 j2ee.platform.is.jsr109=true
