--- a/IntegratedLibrarySystemV2/IntegratedLibrarySystemV2-ejb/nbproject/private/private.properties
+++ b/IntegratedLibrarySystemV2/IntegratedLibrarySystemV2-ejb/nbproject/private/private.properties
@@ -1,11 +1,11 @@
-deploy.ant.properties.file=C:\\Users\\lester\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv32079556568.properties
+deploy.ant.properties.file=/Users/jinwei/Library/Application Support/NetBeans/8.2/config/GlassFishEE6/Properties/gfv3-512768886.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=D:/Program Files/glassfish-4.1.1/glassfish/domains/domain1
-j2ee.server.home=D:/Program Files/glassfish-4.1.1/glassfish
-j2ee.server.instance=[D:\\Program Files\\glassfish-4.1.1\\glassfish;D:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=D:/Program Files/glassfish-4.1.1
+j2ee.server.domain=/Applications/NetBeans/glassfish-4.1.1/glassfish/domains/domain1
+j2ee.server.home=/Applications/NetBeans/glassfish-4.1.1/glassfish
+j2ee.server.instance=[/Applications/NetBeans/glassfish-4.1.1/glassfish:/Applications/NetBeans/glassfish-4.1.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=/Applications/NetBeans/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
-netbeans.user=C:\\Users\\lester\\AppData\\Roaming\\NetBeans\\8.2
-project.IntegratedLibrarySystemV2Library=C:\\Users\\lester\\Desktop\\IS2103_A2-Pending-JW\\IS2103_A2-Pending-JW\\IntegratedLibrarySystemV2Library
+netbeans.user=/Users/jinwei/Library/Application Support/NetBeans/8.2
+project.IntegratedLibrarySystemV2Library=/Users/jinwei/Desktop/IS2103_Labs/IS2103_A2/IntegratedLibrarySystemV2Library
 user.properties.file=C:\\Users\\lester\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
